# ChangeLog for media-video/aegisub
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*aegisub-9999 (30 Jan 2011)
*aegisub-3.0_pre4897 (30 Jan 2011)
*aegisub-2.1.8 (30 Jan 2011)

  30 Jan 2011; Nikoli <nikoli@lavabit.com> +aegisub-2.1.8.ebuild,
  +files/aegisub-2.1.8-do-not-verify-audiolibs.patch,
  +files/aegisub-2.1.8-external-libass.patch, +aegisub-3.0_pre4897.ebuild,
  +files/aegisub-3.0-Makefile-selected-po.patch,
  +files/aegisub-3.0-pre-Makefile-LDFLAGS.patch,
  +files/aegisub-3.0-pre-external-libass.patch,
  +files/aegisub-3.0-pre-fix-ln-install.patch,
  +files/aegisub-3.0-pre-include-stdint.h.patch, +aegisub-9999.ebuild,
  +metadata.xml:
  initial ebuilds
