@@ -8,7 +8,8 @@ AUX aegisub-3.0-pre-include-stdint.h.patch 312 RMD160 2d126da25046079cfbac524880
 DIST aegisub-2.1.8.tar.gz 2431099 RMD160 d2630f838a9e8720c65d9f18010e80e17fb8183b SHA1 70c51a21c86f73d744fcf1e080e89d98885e557c SHA256 a67356e5c4fa376738d363f1cf5e50aa74e6b69e76a089ed0442bf6d7390d769
 DIST aegisub-3.0_pre4897.tar.xz 1743732 RMD160 7ff9c6c8c51673118a6c1a4f8d18506b885ba1f0 SHA1 69854944f57202c2afb3a24edf60ca85f535fe29 SHA256 d4d374e815b907403ad40438f54567e3e05d79e18c175def31107273f1c8e7af
 EBUILD aegisub-2.1.8.ebuild 1738 RMD160 d4010837c8ace29b00bb33eec2875d9047e32f27 SHA1 b12259f80b8d68622f0126455b61003f52fe9079 SHA256 b1f38a053c108b8d37fd52c1ee3b5f05fba6f4b367ae335ab29ae336e73f225a
-EBUILD aegisub-3.0_pre4897.ebuild 2206 RMD160 08b878247d2a93fa7407e5faa54ca5fcb6f3ade4 SHA1 0152226d4f23efd22555ff1c884d15d222eb1d44 SHA256 337a9097f408fa929bc0a463f896dda5180795d780380b310df35255efc224bf
-EBUILD aegisub-9999.ebuild 1803 RMD160 f7e0250955fdaba181aaedb27dee3198615a7418 SHA1 66f4d867c4dec783378ef3c69784d00b7e9e34b1 SHA256 d57b9bf09b3af161fa5aa526f87892c32d97fb65ad3303298ca3bb1f1f3854cb
-MISC ChangeLog 708 RMD160 ebe0d3313a8d72c0eb55aa543b373e740e93d2e7 SHA1 a65a59f8434dc1b1865a9f4e622eead4652b3ba1 SHA256 c788aee27906794ab11ba04562945819d98a3a6d9bd65dfd40d1a6e9125fe0b3
+EBUILD aegisub-2.1.9999.ebuild 1520 RMD160 e3965f357de306ce246e1604dba1d7da7e8d614b SHA1 b3640a3ba11217357e006ca8bb0d401eb6b51377 SHA256 eaf21d967817febbaac47e6a17663af6c12b79fb8b8f477f6345fc2caaf89925
+EBUILD aegisub-3.0_pre4897.ebuild 2223 RMD160 0238ecd7aaca2a20a89e3654d4be097e4ca62314 SHA1 3102324c1f89d60058902c0ce654c4511654eddc SHA256 1a33e2f1dc8ae0b520aadcf57e9435a2b919beaf7ee25da5bfc18ec6e83ea727
+EBUILD aegisub-9999.ebuild 1820 RMD160 6b29fa16f657702563c673109611550007abe527 SHA1 e5d917d266ccfed109ec79ce7a95c00b58db486d SHA256 2a859caa68503a09d342b4fffee53e84ea4f77a75d2b695d786a8fd5d04c1e89
+MISC ChangeLog 927 RMD160 3d7161372c9baa2b2a68946f9223656a0e3509d9 SHA1 e982f93adcd019f075cbba5331670dead33284f4 SHA256 54fe33c7378baeb91a6071b3a60f6dfd0b04a7b68af186747303c792a743b50e
 MISC metadata.xml 248 RMD160 2418fc56f477393d0e1091455ff5523b58c07a83 SHA1 834f92f9ff1f64ceaac6c39e835ea63873d03d51 SHA256 baa352e20702c6ad701749c41aa0a8cce9c1fc62511a96b9adefc42a788026ab
