@@ -2,27 +2,26 @@
 # Distributed under the terms of the GNU General Public License v2
 # $Header: $
 
-EAPI=2
+EAPI="4"
 
-WX_GTK_VER="2.9"
-
-LANGS=" ca cs da de el es fi fr hu it ja ko pt_BR ru vi zh_CN zh_TW"
-
-inherit autotools eutils wxwidgets flag-o-matic subversion
+WX_GTK_VER="2.8"
+inherit autotools eutils wxwidgets subversion
 
 DESCRIPTION="Advanced SSA/ASS subtitle editor"
 HOMEPAGE="http://www.aegisub.net/"
-ESVN_REPO_URI="http://svn.aegisub.org/trunk/aegisub/"
+ESVN_REPO_URI="http://svn.aegisub.org/branches/aegisub_2.1.9/aegisub/"
 
 LICENSE="GPL-2"
 SLOT="0"
 KEYWORDS=""
 IUSE="alsa debug +ffmpeg lua nls openal oss portaudio pulseaudio spell"
-IUSE+="${LANGS// / linguas_}"
 
 RDEPEND="
 	x11-libs/wxGTK:${WX_GTK_VER}[X,opengl]
+	virtual/opengl
+	virtual/glu
 	>=media-libs/libass-0.9.7[fontconfig]
+	virtual/libiconv
 	>=media-libs/fontconfig-2.4.2
 	media-libs/freetype:2
 
@@ -34,7 +33,7 @@ RDEPEND="
 	lua? ( >=dev-lang/lua-5.1.1 )
 
 	spell? ( >=app-text/hunspell-1.2 )
-	ffmpeg? ( >=media-video/ffmpeg-0.6_p25767 )
+	ffmpeg? ( virtual/ffmpeg )
 "
 DEPEND="${RDEPEND}
 	dev-util/intltool
@@ -42,30 +41,18 @@ DEPEND="${RDEPEND}
 	media-gfx/imagemagick
 "
 
-pkg_setup() {
-	# until fixed UPSTREAM
-	filter-flags -Wl,--as-needed
-	filter-ldflags --as-needed
-	filter-ldflags -Wl,--as-needed
-}
-
 src_prepare() {
-	subversion_wc_info
-	echo "${ESVN_WC_REVISION}" > svn_revision
+	#epatch "${FILESDIR}"/${PN}-2.1.8-do-not-verify-audiolibs.patch
+	epatch "${FILESDIR}"/${PN}-2.1.8-external-libass.patch
 
-	# linguas
-	for x in ${LANGS}; do
-		if use !linguas_${x}; then
-			sed -e "s/^\t${x/fr/fr_FR}.po/\t/" -i po/Makefile || die
-		fi
-	done
-
+	sh autogen.sh --skip-configure
 	eautoreconf
+
+	echo "${ESVN_WC_REVISION}" > svn_revision
 }
 
 src_configure() {
 	econf \
-		--prefix="${D}/usr" \
 		--with-external-libass \
 		$(use_with alsa) \
 		$(use_with oss) \
@@ -77,8 +64,4 @@ src_configure() {
 		$(use_with spell hunspell) \
 		$(use_enable debug) \
 		$(use_enable nls)
-}
-
-src_install() {
-	emake DESTDIR="${D}" install || die "emake install failed"
 }
