@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*aegisub-2.1.9999 (03 Jul 2011)
+
+  03 Jul 2011; Nikoli <nikoli@lavabit.com> +aegisub-2.1.9999.ebuild,
+  aegisub-3.0_pre4897.ebuild, aegisub-9999.ebuild:
+  add live ebuild for 2.1.x, migrate to EAPI4 and virtual/ffmpeg
+
 *aegisub-9999 (30 Jan 2011)
 *aegisub-3.0_pre4897 (30 Jan 2011)
 *aegisub-2.1.8 (30 Jan 2011)
